protocols/tests/identities/identity_d2/two_fork_ill_formed.out
error: a is a function argument, but conditions in if-statements / while-loops cannot mention function arguments
   ┌─ identities/identity_d2/two_fork_ill_formed.prot:16:9
   │
16 │   if (!(a == 32'd0)) {
   │         ^ a is a function argument, but conditions in if-statements / while-loops cannot mention function arguments

