protocols/tests/identities/identity_d2/two_fork_ill_formed.prot
struct Identity {
  in a: u32,
  out s: u32,
}

// Update (11/9): this protocol is considered to be ill-formed
// because the guard for the while-loop refer to an
// input port of the DUT, which is forbidden (see `well-formedness.md`)
fn two_fork_ill_formed<DUT: Identity>(in a: u32, out s: u32) {
  DUT.a := a;
  step();

  DUT.a := a;
  step();

  if (!(a == 32'd0)) {
    fork();
  }
  else {
    fork();
  }
  
  assert_eq(s, DUT.s);
  step();
}
